--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Residential Yard Paving Compliance Calculator — Hercules §13-30.750</title>
   <style>
-    :root{
-      --bg:#0b1020; --panel:#121831; --muted:#6b7296; --text:#e6e9f8; --accent:#7aa9ff; --good:#1fbf75; --bad:#ff6b6b; --warn:#ffb44c;
-    }
+    :root{ --bg:#0b1020; --panel:#121831; --muted:#6b7296; --text:#e6e9f8; --accent:#7aa9ff; --good:#1fbf75; --bad:#ff6b6b; --warn:#ffb44c; }
     html,body{margin:0;height:100%;background:var(--bg);color:var(--text);font:16px/1.45 system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji","Segoe UI Emoji"}
     a{color:var(--accent);} .wrap{max-width:1100px;margin:0 auto;padding:28px}
     h1{font-size:1.6rem;margin:0 0 16px} h2{font-size:1.1rem;margin:28px 0 8px;color:#cfd6fb}
@@ -48,13 +46,14 @@
       <!-- 0) Parcel Lookup Panel -->
       <div class="panel">
         <h2>0) Parcel Lookup (APN / Address)</h2>
+        <div id="proxyStatus" class="alert warn" style="display:none"></div>
+
         <div class="row">
           <label for="apn">Assessor's Parcel Number (APN)</label>
           <input id="apn" type="text" placeholder="e.g., 404-123-015" />
         </div>
-        <div class="btns">
-          <button id="lookupAPN">Lookup by APN</button>
-        </div>
+        <div class="btns"><button id="lookupAPN">Lookup by APN</button></div>
+
         <div class="hr"></div>
         <div class="row">
           <label for="addr">Street Address (optional)</label>
@@ -64,6 +63,7 @@
           <button id="lookupADDR">Search by Address (CCMAP)</button>
           <select id="addrChoices" style="display:none"></select>
         </div>
+
         <div id="apnStatus" class="alert warn" style="display:none"></div>
         <p class="tiny">Auto-fills Lot Area and Building Area (Sq. Ft.) from Contra Costa County Assessor (CCMAP). Verify values before submitting.</p>
       </div>
@@ -158,10 +158,64 @@
 <script>
   const $ = (id)=>document.getElementById(id);
   // ArcGIS Feature Service for Contra Costa County Assessor Parcels (CCMAP)
-  // If CORS blocks direct calls from your domain, route requests through a small proxy endpoint.
   const FEATURE_URL = 'https://gis.ccmap.us/arcgis/rest/services/CCMAP/AssessorParcels/MapServer/0/query';
-  // Use proxy by default to avoid CORS (Cloudflare Worker route such as '/api/parcel')
-  const PROXY_URL = '/api/parcel';
+  // Use proxy by default to avoid CORS. If on a static host, set this to your full Worker URL.
+  let PROXY_URL = '/api/parcel';
+
+  // ---- Fuzzy address helpers ----
+  function normAddr(str){
+    return (str||'').toUpperCase().replace(/[^A-Z0-9 ]/g,' ').replace(/\s+/g,' ').trim();
+  }
+  const SUFFIX_MAP = {
+    ST:['ST','ST.','STREET'], RD:['RD','RD.','ROAD'], AVE:['AV','AVE','AVE.','AVENUE'], BLVD:['BLVD','BLVD.','BOULEVARD'],
+    CT:['CT','CT.','COURT'], DR:['DR','DR.','DRIVE'], LN:['LN','LN.','LANE'], PL:['PL','PL.','PLACE'], TER:['TER','TER.','TERRACE'],
+    WAY:['WAY'], CIR:['CIR','CIR.','CIRCLE'], HWY:['HWY','HWY.','HIGHWAY'], PKWY:['PKWY','PKWY.','PARKWAY'], TRL:['TR','TR.','TRL','TRL.','TRAIL']
+  };
+  function buildFuzzyWhere(addr){
+    const up = normAddr(addr); if(!up) return '1=0';
+    const parts = up.split(' ');
+    let base = parts.slice(); let suffixVariants = null;
+    const last = parts[parts.length-1];
+    for (const variants of Object.values(SUFFIX_MAP)){
+      if (variants.includes(last)) { suffixVariants = variants; base = parts.slice(0,-1); break; }
+    }
+    const clauses = [];
+    for (const t of base){ if (t) clauses.push(`UPPER(SITUSADDRESS) LIKE '%${t.replaceAll("'","''")}%'`); }
+    if (suffixVariants){
+      const ors = suffixVariants.map(s=>`UPPER(SITUSADDRESS) LIKE '% ${s.replaceAll("'","''")}%'`).join(' OR ');
+      clauses.push(`(${ors})`);
+    }
+    return clauses.length? clauses.join(' AND ') : '1=0';
+  }
+
+  // Unified fetch: try proxy first; fallback to direct service (works on City network)
+  async function parcelQuery(params){
+    const qs = params.toString();
+    if (PROXY_URL){
+      try{
+        const r = await fetch(`${PROXY_URL}?${qs}`, {mode:'cors'});
+        if (r.ok) return await r.json();
+      }catch(e){ /* fall through */ }
+    }
+    const r2 = await fetch(`${FEATURE_URL}?${qs}`);
+    if (!r2.ok) throw new Error('Upstream error');
+    return await r2.json();
+  }
+
+  // Proxy health check
+  async function checkProxy(){
+    const status = $('proxyStatus');
+    try{
+      const testParams = new URLSearchParams({ where:'1=0', outFields:'APN', returnGeometry:'false', f:'json' });
+      const r = await fetch(`${PROXY_URL}?${testParams.toString()}`, {mode:'cors'});
+      if (!r.ok) throw new Error('bad status');
+      status.style.display='none';
+    }catch(e){
+      status.style.display='block';
+      status.className='alert warn';
+      status.textContent = `Note: Parcel proxy not reachable at "${PROXY_URL}". If hosted on a static site, set PROXY_URL to your Cloudflare Worker URL (e.g., https://your-worker.workers.dev/api/parcel).`;
+    }
+  }
 
   const fmt = (n)=> isFinite(n)? new Intl.NumberFormat().format(n): '—';
   const pct = (n)=> isFinite(n)? (n*100).toFixed(1)+'%':'—';
@@ -171,37 +225,23 @@
     span.textContent = ok? '✔ ' + warnText : '✖ ' + failText;
     return span;
   };
-
-  function readNum(id){
-    const v = parseFloat($(id).value); return isNaN(v)? 0 : v;
-  }
+  function readNum(id){ const v = parseFloat($(id).value); return isNaN(v)? 0 : v; }
 
   function calc(){
     // Basics
-    const lot = readNum('lot');
-    const zone = $('zone').value;
-    const bldg = readNum('bldg');
-    const frontArea = readNum('frontArea');
-    const rearSideArea = readNum('rearSideArea');
+    const lot = readNum('lot'); const zone = $('zone').value; const bldg = readNum('bldg');
+    const frontArea = readNum('frontArea'); const rearSideArea = readNum('rearSideArea');
 
-    // Existing
-    const fd0 = readNum('frontDrive_exist');
-    const fo0 = readNum('frontOther_exist');
-    const rs0 = readNum('rearPave_exist');
-    const imp0 = readNum('imperv_exist');
-
-    // Deltas
-    const fdD = readNum('frontDrive_delta');
-    const foD = readNum('frontOther_delta');
-    const rsD = readNum('rearPave_delta');
-    const impD = readNum('imperv_delta');
+    // Existing & deltas
+    const fd0 = readNum('frontDrive_exist'); const fo0 = readNum('frontOther_exist'); const rs0 = readNum('rearPave_exist'); const imp0 = readNum('imperv_exist');
+    const fdD = readNum('frontDrive_delta'); const foD = readNum('frontOther_delta'); const rsD = readNum('rearPave_delta'); const impD = readNum('imperv_delta');
 
     // Totals after
     const fd = Math.max(0, fd0 + fdD);
     const fo = Math.max(0, fo0 + foD);
     const rs = Math.max(0, rs0 + rsD);
 
-    // Landscape (excludes any hard surface)
+    // Landscape
     const frontLand = Math.max(0, frontArea - (fd + fo));
     const rearLand  = Math.max(0, rearSideArea - rs);
 
@@ -213,23 +253,25 @@
     const rlPct = rearSideArea>0 ? rearLand/rearSideArea : NaN;
 
     // Compliance checks
-    const fdOK = fdPct <= 0.35 + 1e-9; // Driveway ≤ 35%
-    const foOK = foPct <= 0.25 + 1e-9; // Other hardscape ≤ 25%
-    const flOK = flPct >= 0.40 - 1e-9; // Landscape ≥ 40%
-    const rsOK = rsPct <= 0.60 + 1e-9; // Rear+side paving ≤ 60%
-    const rlOK = rlPct >= 0.40 - 1e-9; // Rear+side landscape ≥ 40%
+    const fdOK = fdPct <= 0.35 + 1e-9;
+    const foOK = foPct <= 0.25 + 1e-9;
+    const flOK = flPct >= 0.40 - 1e-9;
+    const rsOK = rsPct <= 0.60 + 1e-9;
+    const rlOK = rlPct >= 0.40 - 1e-9;
 
     // Stormwater / impervious
     const imp = Math.max(0, imp0 + impD) + bldg; // impervious paving + building
     const impPct = lot>0 ? imp/lot : NaN;
     const impOver = zone==='RS-L' ? impPct>0.47+1e-9 : false;
 
-    // Permit trigger (only count additions, not removals)
+    // Permit trigger
     const added = [fdD, foD, rsD].reduce((s,v)=> s + Math.max(0,v||0), 0);
 
-    // Area sanity check (optional)
+    // Area sanity check
     const sumKnown = bldg + frontArea + rearSideArea;
-    const areaMsg = (lot>0 && sumKnown>0) ? (Math.abs(sumKnown - lot) <= lot*0.03 ? '' : `Heads up: building + front + rear/side = ${fmt(sumKnown)} sf, which differs from lot area (${fmt(lot)} sf). Double-check your areas.`) : '';
+    const areaMsg = (lot>0 && sumKnown>0)
+      ? (Math.abs(sumKnown - lot) <= lot*0.03 ? '' : `Heads up: building + front + rear/side = ${fmt(sumKnown)} sf, which differs from lot area (${fmt(lot)} sf). Double-check your areas.`)
+      : '';
 
     // Write UI
     $('fd_area').textContent = fmt(fd) + ' sf';
@@ -244,9 +286,9 @@
     $('fl_pct').textContent = pct(flPct);
     $('rl_pct').textContent = pct(rlPct);
 
-    // Badges
     const setBadge = (id, ok, warn='Complies', fail='Does not comply')=>{
-      const host = $(id); host.innerHTML = ''; host.appendChild(badge(ok, warn, fail)); };
+      const host = $(id); host.innerHTML = ''; host.appendChild(badge(ok, warn, fail));
+    };
     setBadge('fd_badge', fdOK); setBadge('fo_badge', foOK); setBadge('fl_badge', flOK); setBadge('rs_badge', rsOK); setBadge('rl_badge', rlOK);
 
     $('imp_area').textContent = fmt(imp) + ' sf';
@@ -292,28 +334,19 @@
 
   $('calc').addEventListener('click', calc);
 
-  // ---------- APN Lookup using the Contra Costa CCMAP Feature Service
+  // ---------- APN Lookup (proxy + fallback)
   async function lookupAPN(){
-    const apn = $('apn').value.trim();
-    const status = $('apnStatus');
+    const apn = $('apn').value.trim(); const status = $('apnStatus');
     if(!apn){ status.style.display='block'; status.className='alert warn'; status.textContent='Enter an APN to search (e.g., 404-123-015).'; return; }
     status.style.display='block'; status.className='alert warn'; status.textContent='Looking up parcel…';
-
     try{
       const where = `APN='${apn.replaceAll("'","''")}'`;
       const params = new URLSearchParams({ where, outFields:'APN,SITUSADDRESS,LOTSQFT,BLDGSQFT', returnGeometry:'false', f:'json' });
-      const url = PROXY_URL ? `${PROXY_URL}?${params.toString()}` : `${FEATURE_URL}?${params.toString()}`;
-      const res = await fetch(url);
-      if(!res.ok) throw new Error('Network error or CORS blocked');
-      const data = await res.json();
+      const data = await parcelQuery(params);
       const attrs = data.features && data.features[0] && data.features[0].attributes;
       if(!attrs){ status.className='alert no'; status.textContent='No parcel found for that APN (or parcel is outside City of Hercules).'; return; }
-
-      if (attrs.LOTSQFT) $('lot').value = attrs.LOTSQFT;
-      if (attrs.BLDGSQFT) $('bldg').value = attrs.BLDGSQFT;
-
-      const situs = attrs.SITUSADDRESS ? `
-Address: ${attrs.SITUSADDRESS}` : '';
+      if (attrs.LOTSQFT) $('lot').value = attrs.LOTSQFT; if (attrs.BLDGSQFT) $('bldg').value = attrs.BLDGSQFT;
+      const situs = attrs.SITUSADDRESS ? `\nAddress: ${attrs.SITUSADDRESS}` : '';
       if (attrs.SITUSADDRESS && !attrs.SITUSADDRESS.toUpperCase().includes('HERCULES')) {
         status.className = 'alert warn';
         status.textContent = 'Parcel found, but appears outside City of Hercules. ' + `Found APN ${attrs.APN || apn}.` + situs;
@@ -321,30 +354,27 @@ Address: ${attrs.SITUSADDRESS}` : '';
         status.className='alert ok';
         status.textContent = `Found APN ${attrs.APN || apn}.` + situs;
       }
-      window.__lookup = attrs;
-      calc();
-    }catch(err){ status.className='alert no'; status.textContent='Lookup failed. If this persists, your browser may be blocked by CORS. Use the City network or a proxy endpoint.'; console.error(err); }
+      window.__lookup = attrs; calc();
+    }catch(err){
+      status.className='alert no';
+      status.textContent='Lookup failed. Ensure the proxy URL is correct or try on the City network.';
+      console.error(err);
+    }
   }
 
-  // ---------- Address search via CCMAP attribute query (no geocoder)
+  // ---------- Address search (fuzzy) + proxy/fallback
   async function lookupAddress(){
-    const addr = $('addr').value.trim();
-    const status = $('apnStatus');
-    const choices = $('addrChoices');
+    const addr = $('addr').value.trim(); const status = $('apnStatus'); const choices = $('addrChoices');
     choices.style.display='none'; choices.innerHTML='';
     if(!addr){ status.style.display='block'; status.className='alert warn'; status.textContent='Enter part of a site address (e.g., number and street name).'; return; }
     status.style.display='block'; status.className='alert warn'; status.textContent='Searching addresses…';
-
     try{
-      const like = `%${addr.toUpperCase().replaceAll("'","''")}%`;
-      const where = `UPPER(SITUSADDRESS) LIKE '${like}'`;
+      const where = buildFuzzyWhere(addr);
       const params = new URLSearchParams({ where, outFields:'APN,SITUSADDRESS,LOTSQFT,BLDGSQFT', returnGeometry:'false', orderByFields:'SITUSADDRESS', resultRecordCount:'25', f:'json' });
-      const url = PROXY_URL ? `${PROXY_URL}?${params.toString()}` : `${FEATURE_URL}?${params.toString()}`;
-      const res = await fetch(url);
-      if(!res.ok) throw new Error('Network error or CORS blocked');
-      const data = await res.json();
+      const data = await parcelQuery(params);
       let feats = (data.features||[]).map(f=>f.attributes).filter(Boolean);
-      // Hercules-only filter (simplifies public UX). Remove this filter if you want countywide results.
+
+      // Hercules-only filter (public UX)
       feats = feats.filter(a => (a.SITUSADDRESS||'').toUpperCase().includes('HERCULES'));
 
       if(!feats.length){ status.className='alert no'; status.textContent='No matches. Try a simpler address (e.g., number + street name).'; return; }
@@ -356,8 +386,13 @@ Address: ${attrs.SITUSADDRESS}` : '';
         choices.appendChild(opt);
       });
       choices.style.display='inline-block';
-      status.className='alert ok'; status.textContent=`Select an address from the list (${feats.length} found).`;
-    }catch(err){ status.className='alert no'; status.textContent='Address search failed. If this persists, your browser may be blocked by CORS. Use a proxy endpoint.'; console.error(err); }
+      status.className='alert ok';
+      status.textContent=`Select an address from the list (${feats.length} found).`;
+    }catch(err){
+      status.className='alert no';
+      status.textContent='Address search failed. Ensure the proxy URL is correct or try on the City network.';
+      console.error(err);
+    }
   }
 
   function pickAddress(){
@@ -367,7 +402,8 @@ Address: ${attrs.SITUSADDRESS}` : '';
     if (attrs.LOTSQFT) $('lot').value = attrs.LOTSQFT;
     if (attrs.BLDGSQFT) $('bldg').value = attrs.BLDGSQFT;
     $('apn').value = attrs.APN || '';
-    status.className='alert ok'; status.textContent = `Loaded ${attrs.SITUSADDRESS || 'selected address'} (APN ${attrs.APN || '—'}).`;
+    status.className='alert ok';
+    status.textContent = `Loaded ${attrs.SITUSADDRESS || 'selected address'} (APN ${attrs.APN || '—'}).`;
     window.__lookup = attrs;
     calc();
   }
@@ -375,12 +411,25 @@ Address: ${attrs.SITUSADDRESS}` : '';
   $('lookupAPN').addEventListener('click', lookupAPN);
   $('lookupADDR').addEventListener('click', lookupAddress);
   $('addrChoices').addEventListener('change', pickAddress);
-  $('reset').addEventListener('click', ()=>{ document.querySelectorAll('input').forEach(i=> i.value=''); $('zone').value='RS-L'; $('permit120').style.display='none'; $('areaCheck').style.display='none'; document.querySelectorAll('#results b').forEach(b=> b.textContent='—'); document.querySelectorAll('#results .badge').forEach(s=>{s.className='badge'; s.textContent='—'}); $('imp_note').textContent=''; $('permitLine').textContent=''; });
+  $('reset').addEventListener('click', ()=>{
+    document.querySelectorAll('input').forEach(i=> i.value='');
+    $('zone').value='RS-L';
+    $('permit120').style.display='none';
+    $('areaCheck').style.display='none';
+    document.querySelectorAll('#results b').forEach(b=> b.textContent='—');
+    document.querySelectorAll('#results .badge').forEach(s=>{s.className='badge'; s.textContent='—'});
+    $('imp_note').textContent='';
+    $('permitLine').textContent='';
+  });
   $('print').addEventListener('click', ()=> window.print());
+  document.addEventListener('DOMContentLoaded', checkProxy);
 
   // Auto-calc on input for instant feedback
   document.querySelectorAll('input, select').forEach(el=>{
-    el.addEventListener('input', ()=>{ clearTimeout(window.__debounce); window.__debounce = setTimeout(calc, 120); });
+    el.addEventListener('input', ()=>{
+      clearTimeout(window.__debounce);
+      window.__debounce = setTimeout(calc, 120);
+    });
   });
 </script>
 </body>
@@ -388,15 +437,28 @@ Address: ${attrs.SITUSADDRESS}` : '';
 Cloudflare Worker proxy (paste into /src/index.js or similar and deploy)
 ==============================================
 This proxy simply forwards query parameters to the CCMAP Feature Service and returns JSON with CORS enabled.
-Usage in app: set PROXY_URL = '/api/parcel' and deploy the Worker with a route for '/api/parcel*'.
+Usage in app: set PROXY_URL to '/api/parcel' (same-origin) or to your full Worker URL (e.g., https://your-worker.workers.dev/api/parcel) and route '/api/parcel*' to this Worker.
 
 export default {
   async fetch(request, env, ctx) {
     const url = new URL(request.url);
-    // Base CCMAP layer query endpoint
+
+    // CORS preflight support
+    if (request.method === 'OPTIONS') {
+      return new Response(null, {
+        status: 204,
+        headers: {
+          'access-control-allow-origin': '*',
+          'access-control-allow-methods': 'GET, OPTIONS',
+          'access-control-allow-headers': 'Content-Type'
+        }
+      });
+    }
+
+    // Upstream CCMAP query
     const target = new URL('https://gis.ccmap.us/arcgis/rest/services/CCMAP/AssessorParcels/MapServer/0/query');
 
-    // Pass through allowed params only (basic allowlist)
+    // Allowlist params
     const allow = new Set(['where','outFields','returnGeometry','orderByFields','resultRecordCount','f']);
     for (const [k,v] of url.searchParams.entries()) {
       if (allow.has(k)) target.searchParams.set(k, v);
@@ -418,8 +480,6 @@ export default {
     });
   }
 }
-
-// Optional: add an OPTIONS handler if needed by your platform
 
 -->
 </html>
